[package]
name = "shigoto"
version = "0.1.0"
authors = ["Hitesh Paul <paulhitesh.hp@gmail.com>"]

[[bin]]
name = "sht"
path = "src/main.rs"

[dependencies]
clap = "2"
term = "^0.4"
prettytable-rs = "^0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
